# Zebral_ESP32Cam

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  format_code.bat  sdkconfig
components/: .clang-format
main/: CMakeLists.txt  idf_component.yml  main.c  zba_auth.c  zba_auth.h  zba_binaries.c  zba_binaries.h  zba_camera.c  zba_camera.h  zba_commands.c  zba_commands.h  zba_config.c  zba_config.h  zba_err.h  zba_html.c  zba_html.h  zba_i2c.c  zba_i2c.h  zba_imgproc.c  zba_imgproc.h  zba_led.c  zba_led.h  zba_pins.c  zba_pins.h  zba_priority.h  zba_rtsp.cpp  zba_rtsp.h  zba_sd.c  zba_sd.h  zba_stream.c  zba_stream.h  zba_util.c  zba_util.h  zba_vision.c  zba_vision.h  zba_web.c  zba_web.h  zba_wifi.c  zba_wifi.h
res/: .gitignore  ESP32_Wiring.fzz  ESP32_Wiring_0.1.fzz  index.html
