set(ZBA_SRC
    "zba_config.c"
    "zba_util.c"
    "zba_commands.c"
    "zba_stream.c"
    "zba_wifi.c"
    "zba_camera.c"
    "zba_web.c"
    "zba_led.c"
    "zba_pins.c"
    "zba_sd.c"
    "zba_binaries.c"
    "zba_auth.c"
    "zba_vision.c"
    "zba_imgproc.c"
    "zba_html.c"
    "zba_i2c.c"
)
idf_component_register(SRCS "zba_wifi_REMOTE_1386.c" "zba_wifi_LOCAL_1386.c" "zba_util_REMOTE_1386.c" "zba_commands_LOCAL_1386.c" "zba_commands_BACKUP_1386.c" "main.c" ${ZBA_SRC} INCLUDE_DIRS ".")
